--- a/osgi-service/pom.xml
+++ b/osgi-service/pom.xml
@@ -48,6 +48,18 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
       </plugin-->
       <!--plugin> <groupId>org.apache.felix</groupId> <artifactId>maven-scr-plugin</artifactId> <version>1.20.0</version> <executions> <execution> <id>generate-scr-scrdescriptor</id> <goals> <goal>scr</goal> </goals> </execution> </executions> </plugin-->
       <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <configuration>
+           <archive>
+                        <manifestFile>./src/main/webapp/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
+        <attachClasses>true</attachClasses>
+        <classesClassifier>classes</classesClassifier>
+      </configuration>
+
+        </plugin>
+      <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <extensions>true</extensions>
@@ -64,8 +76,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
           <supportedProjectTypes>
             <supportedProjectType>war</supportedProjectType>
           </supportedProjectTypes>
-          <manifestLocation>
-          ./src/main/webapp/META-INF</manifestLocation>
+          <manifestLocation>./src/main/webapp/META-INF</manifestLocation>
           <instructions>
             <!--Export-Package>${project.groupId}.api</Export-Package-->
             <Import-Package>
