--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
   </properties>
   <modules>
     <module>osgi-service</module>
-    <!--module>osgi-client</module-->
+    <module>osgi-client</module>
   </modules>
   <build>
     <pluginManagement>
