--- a/osgi-client/pom.xml
+++ b/osgi-client/pom.xml
@@ -23,6 +23,14 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
     </dependency>
+     <dependency>
+    <groupId>javax.inject</groupId>
+    <artifactId>javax.inject</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.glassfish</groupId>
+    <artifactId>osgi-cdi-api</artifactId>
+</dependency>
       <dependency>
             <groupId>com.example</groupId>
             <artifactId>osgi-service</artifactId>
